--- a/src/main/frontend/webapp/src/index.html
+++ b/src/main/frontend/webapp/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>AcubeSAT Mission Control</title>
-  <base href="{{contextPath}}/static">
+  <base href="{{contextPath}}/static/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
